SUBDIRS = SequentialFirstFitResourceMapper LinearScanAllocator \
	BasicBlockScheduler SequentialScheduler PreOptimizer

basedir = ${prefix}/share/tce/scheduler/passes
nobase_base_DATA = \
		default_scheduler.conf old_gcc.conf sequential_scheduler.conf \
		sequential_tcecc_scheduler.conf

EXTRA_DIST = ${nobase_base_DATA}
