SUBDIRS = tpef mach Graph osal memory program bem idf umach

lib_LTLIBRARIES = libttabase.la

libttabase_la_SOURCES = 
libttabase_la_LIBADD = tpef/libtpef.la mach/libmach.la osal/libosal.la \
                       memory/libmemory.la \
		       program/libprogram.la bem/libbem.la idf/libidf.la \
		       umach/libuniversalmachine.la Graph/libgraph.la

EXTRA_DIST = tpef mach Graph osal memory program bem idf umach

